suil (0.6.0) stable;

  * Use path variables in pkgconfig files
  * Add support for embedding X11 UIs (ui:X11UI)
  * Support new LV2 UI features automatically if provided by host

 -- David Robillard <d@drobilla.net>  Wed, 18 Apr 2012 19:32:43 -0400

suil (0.4.4) stable;

  * Fix embedding Gtk2 Qt4 UIs in Qt4 hosts that do not link to Gtk2

 -- David Robillard <d@drobilla.net>  Sat, 11 Jun 2011 11:20:11 -0400

suil (0.4.2) stable;

  * Fix compilation issues on some systems
  * Fix build system Python 3 compatibility

 -- David Robillard <d@drobilla.net>  Wed, 25 May 2011 19:00:00 -0400

suil (0.4.0) stable;

  * Initial release

 -- David Robillard <d@drobilla.net>  Tue, 24 May 2011 23:00:00 -0400
