@@ -74,7 +74,7 @@ suil_wrapper_new(SuilHost*      host,
 
 	SuilWrapper* wrapper = (SuilWrapper*)malloc(sizeof(SuilWrapper));
 	wrapper->wrap = wrapper_wrap;
-	wrapper->free = (SuilWrapperFreeFunc)free;
+	wrapper->free = NULL;
 	wrapper->impl = NULL;
 
 	return wrapper;
