@@ -1,3 +1,10 @@
+suil (9999) stable;
+
+  * Fix crashes when wrapper widget is destroyed by toolkit before
+    suil cleanup function is called.
+
+ -- David Robillard <d@drobilla.net>
+
 suil (0.6.0) stable;
 
   * Use path variables in pkgconfig files
